src/objects/Custom_Log__c.object
<CustomObject>
    <description>As debug logs are only persisted if they are turned on, and only for 20 transactions.  This object will persist all code events to ensure full stack traceability even without debug enabled.</description>
    <fields>
        <fullName>Message__c</fullName>
        <description>The message recorded for this particular log event.  This will normally be the error thrown or some critical calculation output, list of objects used within the transaction etc.</description>
        <inlineHelpText>The message recorded for this particular log event.  This will normally be the error thrown or some critical calculation output, list of objects used within the transaction etc.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>The name of the project that tis log applies too.</description>
        <inlineHelpText>The name of the project that tis log applies too.</inlineHelpText>
        <label>Project</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Stamp__c</fullName>
        <description>the timestamp that the log event is recorded at.  Logs are persisted at end of transaction so this field is the actual time of the event.</description>
        <inlineHelpText>the timestamp that the log event is recorded at.  Logs are persisted at end of transaction so this field is the actual time of the event.</inlineHelpText>
        <label>Time Stamp</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The level that this log is recorded at.</description>
        <inlineHelpText>The level that this log is recorded at.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Custom Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Time_Stamp__c</columns>
        <columns>Project__c</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CLOG-{00000}</displayFormat>
        <label>Custom Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>